[package]
name = "grav-bar"
version = "26.7.1"
edition = "2024"
description = "Fast, zero-dependency, and highly customizable custom status line for the Google Antigravity CLI"
license = "MIT"
repository = "https://github.com/AABelkhiria/grav-bar"
readme = "README.md"
keywords = ["cli", "status-bar", "antigravity"]
categories = ["command-line-utilities"]
authors = ["Ash <belkhiria.achraf@gmail.com>"]
exclude = [".github/"]

[dependencies]
